fix: don't stretch devise dialogs

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -168,6 +168,7 @@ strong
   border: 0.5em solid $purple
   padding: 1em
   color: $darkPurple
+  align-self: flex-start
 
   h1, h2, h3, h4, h5, h6, p, a
     font-size: 17px
